2009-04-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Remove escaping from
	WM_NAME and _NET_WM_NAME titles.

2009-04-01  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Fix for BN#107681.
	Moved setting and unsetting a pointer to the ClutterClient from
	HD to inside the ClutterClient

2009-03-31  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Fix for NB#107323.
	It really works this time...

2009-03-31  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Fix for NB#107323,
	Any actors that were children of the ClutterClient's actor are
	now removed (this also fixes hd-decor problems that appear to
	be causing NB#108825)

2009-03-31  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.26

2009-03-30  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_get_actor): Do not reference the actor.

2009-03-30  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Applied patch from
	NB#108114 to fix problem with actor resizing

2009-03-30  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* debian/rules:
	  Recognize the "debug" DEB_BUILD_OPTIONS parameter
	  to enable g_debug() and compile with -O0.
	* matchbox/client-types/mb-wm-client-menu.c
	* matchbox/core/mb-wm-client-window.c
	* matchbox/core/mb-window-manager.c:
	  Changed printf()s to g_log()s.
	* matchbox/core/mb-wm-util.c:
	  g_debug() trapped X errors.

2009-03-27  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.25

2009-03-27  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Removed corruption
	workaround, as it causes problems with the new kernel (and there
	is no need for it now anyway)
